--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,47 @@
 body {
-    background-color: #6B5B95;
-}
+    background-color: #fc3153;
+  }
 
 :root {
     --grid-cols: 1;
     --grid-rows: 1;
+}
+
+@font-face {
+    font-family: Luckiest guy;
+    src: url(/fonts/LuckiestGuy-Regular.ttf);
+  }
+
+.titulo {
+    display: grid;
+    justify-content: center;
+    font-size: 114pt;
+    font-family:'Luckiest guy';
+    color: #fff;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-shadow:   0px -6px 0 #212121,  
+                    0px -6px 0 #212121,
+                    0px  6px 0 #212121,
+                    0px  6px 0 #212121,
+                    -6px  0px 0 #212121,  
+                    6px  0px 0 #212121,
+                    -6px  0px 0 #212121,
+                    6px  0px 0 #212121,
+                    -6px -6px 0 #212121,  
+                    6px -6px 0 #212121,
+                    -6px  6px 0 #212121,
+                    6px  6px 0 #212121,
+                    -6px  18px 0 #212121,
+                    0px  18px 0 #212121,
+                    6px  18px 0 #212121,
+                    0 19px 1px rgba(0,0,0,.1),
+                    0 0 6px rgba(0,0,0,.1),
+                    0 6px 3px rgba(0,0,0,.3),
+                    0 12px 6px rgba(0,0,0,.2),
+                    0 18px 18px rgba(0,0,0,.25),
+                    0 24px 24px rgba(0,0,0,.2),
+                    0 36px 36px rgba(0,0,0,.15);
 }
 
 .items {
@@ -21,3 +58,68 @@ body {
     border: 0.02px solid black;
 }
 
+#color { 
+    background-image: linear-gradient(45deg, #00C0FF 4%, #FFCF00 39%, #FC4F4F 60%);
+    position: relative;
+    color: white;
+    padding: 2.4rem 6.24rem;
+    border-radius: 15px;
+    grid-column-start: 1;
+    grid-row-start: 1;
+}
+
+.buttons {
+    display: grid;
+    grid-template-columns: repeat(10 , 200px);
+    
+}
+
+.p1Color,.black,.rainbow,.clear {
+    display: grid;
+    font-size: 20pt;
+    font-family:'Luckiest guy';
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border-radius: 15px;
+
+}
+
+.p1Color {
+    grid-column-start: 1;
+    grid-row-start: 1;
+    color: #fff;
+    
+}
+
+.black {
+    background-color: #252525;
+    grid-column-start: 3;
+    grid-row-start: 1;
+}
+
+.rainbow {
+    background-image: linear-gradient(
+        90deg,
+        rgba(255, 0, 0, 1) 0%,
+        rgba(255, 154, 0, 1) 10%,
+        rgba(208, 222, 33, 1) 20%,
+        rgba(79, 220, 74, 1) 30%,
+        rgba(63, 218, 216, 1) 40%,
+        rgba(47, 201, 226, 1) 50%,
+        rgba(28, 127, 238, 1) 60%,
+        rgba(95, 21, 242, 1) 70%,
+        rgba(186, 12, 248, 1) 80%,
+        rgba(251, 7, 217, 1) 90%,
+        rgba(255, 0, 0, 1) 100%
+    );
+    color:yellow;
+    grid-column-start: 7;
+    grid-row-start: 1;
+}
+
+.clear {
+    background-color: rgb(232, 250, 250);
+    grid-column-start: 9;
+    grid-row-start: 1;
+}
