--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ body {
     
 }
 
-.p1Color,.black,.rainbow,.clear {
+.p1Color,.black,.slider,.sliderOutput,.rainbow,.clear {
     display: grid;
     font-size: 20pt;
     font-family:'Luckiest guy';
@@ -97,6 +97,28 @@ body {
     grid-column-start: 3;
     grid-row-start: 1;
 }
+
+.slider {
+    width: 100%;
+    height: 25px;
+    opacity: 0.7;
+    transition: .2s;    
+    grid-column-start: 5;
+    grid-row-start: 1;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.sliderOutput {
+    grid-column-start: 5;
+    grid-row-start: 1;
+    position:inherit;
+
+
+}
+
 
 .rainbow {
     background-image: linear-gradient(
