5-commit --> footer ok , css ok

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 body {
+    display:grid;
+    grid-template-columns: repeat(15,80px);
+    grid-template-rows: repeat(15,70px);
     background-color: #fc3153;
+    justify-content: center;
   }
 
 :root {
@@ -14,6 +18,7 @@ body {
 
 .titulo {
     display: grid;
+    grid-column: 1/-1;
     justify-content: center;
     font-size: 114pt;
     font-family:'Luckiest guy';
@@ -44,13 +49,23 @@ body {
                     0 36px 36px rgba(0,0,0,.15);
 }
 
+.buttons {
+    display: grid;
+    justify-content:space-between;
+    grid-column: 1 / -1;
+    grid-row: 4 / 5;
+    
+}
+
 .items {
     display: grid;
+    justify-content: center;
+    grid-row: 6 / 12;
+    grid-column: 1 / 16;
     border-radius: 3px;
     font-size: 8px; 
-    grid-template-rows: repeat(var(--grid-rows),100px);
+    grid-template-rows: repeat(var(--grid-rows),auto-fit);
     grid-template-columns: repeat(var(--grid-cols),100px); 
-    justify-content: center;
 }
 
 .item {
@@ -68,11 +83,7 @@ body {
     grid-row-start: 1;
 }
 
-.buttons {
-    display: grid;
-    grid-template-columns: repeat(10 , 200px);
-    
-}
+
 
 .p1Color,.black,.slider,.sliderOutput,.rainbow,.clear {
     display: grid;
@@ -144,4 +155,22 @@ body {
     background-color: rgb(232, 250, 250);
     grid-column-start: 9;
     grid-row-start: 1;
+}
+
+.footer { 
+    background-color: #252525;
+    grid-row-start: 15;
+    grid-column: 1 / -1;
+    display: grid;
+    grid-column: 1/-1;
+    justify-content: center;
+    align-items: flex-end;
+    font-size: 14pt;
+    font-family:'Luckiest guy';
+    color: #fff;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-shadow:   0px -6px 0 #212121,                                     
+                    0 24px 24px rgba(0,0,0,.2),
+
 }
